# share-my-repo

./: .gitignore  .share-my-repo-config.toml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
scripts/: test.bat  test.sh
src/: cli.py  file_processor.py  formatter.py  git_info.py  main.py
src/share_my_repo/: version.py
tests/: test_file_processor.py  test_formatter.py  test_git_info.py  test_main.py
