[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "share-my-repo"
dynamic = ["version"]
description = "CLI tool to package git repositories for sharing with LLMs"
readme = {content-type = "text/markdown", file = "README.md"}
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "Hitesh Sachdeva", email = "yhsachdeva9@myseneca.ca"}
]
keywords = ["git", "llm", "repository", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "gitpython>=3.1.0",
    "click>=8.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-watch>=4.2.0",
    "pytest-cov>=4.0.0",
    "watchdog>=2.3.0",
    "flake8>=6.0.0",
    "black>=24.0.0",
]

[project.scripts]
share-my-repo = "cli:main"

[project.urls]
Homepage = "https://github.com/hiteshsachdeva343/share-my-repo"
Repository = "https://github.com/hiteshsachdeva343/share-my-repo"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/share_my_repo/version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
